--- a/loginPage.html
+++ b/loginPage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Signup Form</title>
+    <title>Login Page</title>
     <link rel="stylesheet" href="Assets/Styleing/loginPage.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
@@ -33,30 +33,27 @@
                 <input
                   type="email"
                   placeholder="Enter your email"
-                  class="email"
+                  class="_Email"
                   required
                 />
               </div>
-              <span class="_error email-error">
+              <span class="_error _Email-error">
                 <i class="bx bx-error-circle error-icon"></i>
                 <p class="error-text">Please enter a valid email</p>
               </span>
             </div>
-            <div class="_field create-password">
+            <div class="_field">
               <div class="_inputField">
                 <input
                   type="password"
                   placeholder="Create password"
-                  class="password"
+                  class="_Password"
                   required
                 />
               </div>
-              <span class="_error password-error">
+              <span class="_error _Password-error">
                 <i class="bx bx-error-circle error-icon"></i>
-                <p class="error-text">
-                  Please enter at least 8 characters with number, symbol, small
-                  and capital letter.
-                </p>
+                <p class="error-text">Please enter a valid password</p>
               </span>
             </div>
             <div class="_field _checkBoxContainer">
@@ -66,11 +63,12 @@
               </div>
             </div>
             <div class="_inputField _button">
-              <input type="submit" value="Sign In Now" class="_btn" />
+              <input type="submit" value="Sign In Now" class="_btn" id="btn" />
             </div>
           </form>
         </div>
       </div>
     </div>
+    <script src="/ScriptsFiles/loginPage.js"></script>
   </body>
 </html>
