feat(data.json,create data for exams), chore(dashboard.js&.html,to display data of user)

--- a/dashboardStudent.html
+++ b/dashboardStudent.html
@@ -18,9 +18,18 @@
             </div>
             <div class="_Text">
               <div class="_Information">
-                <p><span>Id</span></p>
-                <p><span>Name</span></p>
-                <p><span>Email</span></p>
+                <p>
+                  <span class="_TitleSpan">Id</span>
+                  <span class="_UserId">1</span>
+                </p>
+                <p>
+                  <span class="_TitleSpan">Name</span>
+                  <span class="_UserName"></span>
+                </p>
+                <p>
+                  <span class="_TitleSpan">Email</span>
+                  <span class="_UserEmail"></span>
+                </p>
               </div>
             </div>
           </div>
