chore(dashboard.js,.html.css,make search working with a valid data)

--- a/dashboardStudent.html
+++ b/dashboardStudent.html
@@ -86,78 +86,7 @@
           <div class="_Three">
             <div class="_Midea">
               <div class="_MideaContainer">
-                <div class="_CoursesBox">
-                  <div class="_CoursesItem">
-                    <a href="#" class="_CoursesItemlink">
-                      <div class="_CoursesItembg"></div>
-
-                      <div class="_CoursesItemTitle">
-                        Html Exam for Students at 11-17years old
-                      </div>
-
-                      <div class="_CoursesItemDateBox">
-                        Data:
-                        <span class="_CoursesItemDate"> 04.11.2022 </span>
-                      </div>
-                    </a>
-                  </div>
-                  <div class="_CoursesItem">
-                    <a href="#" class="_CoursesItemlink">
-                      <div class="_CoursesItembg"></div>
-
-                      <div class="_CoursesItemTitle">
-                        Html Exam for Students at 11-17years old
-                      </div>
-
-                      <div class="_CoursesItemDateBox">
-                        Data:
-                        <span class="_CoursesItemDate"> 04.11.2022 </span>
-                      </div>
-                    </a>
-                  </div>
-                  <div class="_CoursesItem">
-                    <a href="#" class="_CoursesItemlink">
-                      <div class="_CoursesItembg"></div>
-
-                      <div class="_CoursesItemTitle">
-                        Html Exam for Students at 11-17years old
-                      </div>
-
-                      <div class="_CoursesItemDateBox">
-                        Data:
-                        <span class="_CoursesItemDate"> 04.11.2022 </span>
-                      </div>
-                    </a>
-                  </div>
-                  <div class="_CoursesItem">
-                    <a href="#" class="_CoursesItemlink">
-                      <div class="_CoursesItembg"></div>
-
-                      <div class="_CoursesItemTitle">
-                        Html Exam for Students at 11-17years old
-                      </div>
-
-                      <div class="_CoursesItemDateBox">
-                        Data:
-                        <span class="_CoursesItemDate"> 04.11.2022 </span>
-                      </div>
-                    </a>
-                  </div>
-                  <div class="_CoursesItem">
-                    <a href="#" class="_CoursesItemlink">
-                      <div class="_CoursesItembg"></div>
-
-                      <div class="_CoursesItemTitle">
-                        Html Exam for Students at 11-17years old
-                      </div>
-
-                      <div class="_CoursesItemDateBox">
-                        Data:
-                        <span class="_CoursesItemDate"> 04.11.2022 </span>
-                      </div>
-                    </a>
-                  </div>
-                </div>
+                <div class="_CoursesBox"></div>
               </div>
             </div>
           </div>
