chore(dashboard.js,exam.js(adding flags and display exams))

--- a/exam.html
+++ b/exam.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Assets/Styleing/dashboard.css" />
-    <title>Document</title>
+    <link
+      href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <title>Exam</title>
   </head>
   <body>
     <div class="_Container">
@@ -20,6 +24,9 @@
             <span class="_Link">
               <p>Dashboard</p>
             </span>
+          </div>
+          <div class="_Marks _MarkAll">
+            <div class="_Title"><p>Flags</p></div>
           </div>
         </div>
         <div class="_SectionTwo">
@@ -43,9 +50,8 @@
               <div class="_MyTodo">
                 <h3>Eaxm</h3>
               </div>
-              <div class="_Marks">
-                <p class="_QNumber">Lorem ipsum dolor sit amet.</p>
-                <button class="_Delete">Delete</button>
+              <div class="_MarksInResponsive _MarkAll">
+                <div class="_Title"><p>Flags</p></div>
               </div>
             </div>
           </div>
@@ -59,21 +65,6 @@
                   />
                 </div>
                 <div class="_Questions">
-                  <!-- <div class="_Question">
-                    <div class="_QuestionTitle">
-                      <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing
-                        elit. Nobis ab unde ex, est iste incidunt quidem
-                        cupiditate ullam consequatur aut!
-                      </p>
-                    </div>
-                    <div class="_Options">
-                      <button class="_Option">bla bla</button>
-                      <button class="_Option">bla bla</button>
-                      <button class="_Option">bla bla</button>
-                      <button class="_Option">bla bla</button>
-                    </div>
-                  </div> -->
                   <div class="_QuestionCard"></div>
                   <div class="_Slider">
                     <button id="_Prev">
