--- a/dashboardStudent.html
+++ b/dashboardStudent.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Assets/Styleing/dashboard.css" />
-    <title>Document</title>
+    <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+
+    <title>Dashboard</title>
   </head>
 
   <body>
@@ -35,10 +37,22 @@
           </div>
         </div>
         <div class="_SectionOne">
-          <div class="_Logo">
+          <div
+            class="_Logo"
+            data-aos="fade-down"
+            data-aos-delay="100"
+            data-aos-duration="1000"
+            data-aos-easing="ease-in-out"
+          >
             <h1>Examination</h1>
           </div>
-          <div class="_List">
+          <div
+            class="_List"
+            data-aos="fade-down"
+            data-aos-delay="100"
+            data-aos-duration="1000"
+            data-aos-easing="ease-in-out"
+          >
             <span class="_Image"
               ><img src="Assets/Images/icons8-apps-48.png" alt="icon apps"
             /></span>
@@ -93,6 +107,10 @@
         </div>
       </div>
     </div>
+    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="ScriptsFiles/dashboardStudent.js"></script>
   </body>
