chore(exam(js,html),result(js,html),dashboard(js,css),adding time and make some edit in result)

--- a/exam.html
+++ b/exam.html
@@ -79,6 +79,7 @@
               >
                 <div class="_Title"><p>Flags</p></div>
               </div>
+              <div class="_Timer" id="Timer"></div>
             </div>
           </div>
           <div class="_Three">
@@ -117,6 +118,7 @@
                         class="_ArrowLeft"
                       />
                     </button>
+                    <button class="_button" id="finshExam">finsh</button>
                   </div>
                 </div>
               </div>
