--- a/resultPage.html
+++ b/resultPage.html
@@ -35,7 +35,7 @@
               Your final score is displayed below. Review your answers and track
               your performance to improve in the future.
             </p>
-            <p><strong>Score:</strong> 85 / 100</p>
+            <p><span>Score:</span> <span id="_result"> 85 / 100</span></p>
           </div>
           <div class="_Shapes">
             <div class="div1" id="one"></div>
