chore((data.json(edit some ids of uestions),dashboard.js,exam,result),(final result of each page))

--- a/exam.html
+++ b/exam.html
@@ -118,7 +118,7 @@
                         class="_ArrowLeft"
                       />
                     </button>
-                    <button class="_button" id="finshExam">finsh</button>
+                    <button class="_button" id="finshExam" type="submit">finsh</button>
                   </div>
                 </div>
               </div>
