chore(exam.js(make check value fixed when checked))

--- a/exam.html
+++ b/exam.html
@@ -118,7 +118,9 @@
                         class="_ArrowLeft"
                       />
                     </button>
-                    <button class="_button" id="finshExam" type="submit">finsh</button>
+                    <button class="_button" id="finshExam" type="submit">
+                      finsh
+                    </button>
                   </div>
                 </div>
               </div>
