--- a/loginPage.html
+++ b/loginPage.html
@@ -80,6 +80,9 @@
             <div class="_inputField _button">
               <input type="submit" value="Sign In Now" class="_btn" id="btn" />
             </div>
+            <div class="_Link">
+              <a href="#" id="_GoToLogin">Don't have An Account?</a>
+            </div>
           </form>
         </div>
       </div>
