chore(exaxm.js,result.js,adding some feature linke number of each question,when student failed return it to dashboard)

--- a/exam.html
+++ b/exam.html
@@ -97,6 +97,15 @@
                   />
                 </div>
                 <div
+                  class="_NumQContainer"
+                  data-aos="zoom-in"
+                  data-aos-delay="150"
+                  data-aos-duration="2000"
+                  data-aos-easing="ease-in-out"
+                >
+                  <span class="_QNumber" id="_QNum"></span>
+                </div>
+                <div
                   class="_Questions"
                   data-aos="zoom-in"
                   data-aos-delay="100"
