--- a/resultPage.html
+++ b/resultPage.html
@@ -28,6 +28,11 @@
         data-aos-duration="2000"
         data-aos-easing="ease-in-out"
       >
+        <p class="_uniqe">
+          <span class="_ifStudentFailed">
+            <button>retake the exam</button></span
+          >
+        </p>
         <div class="_image">
           <div class="_Title">
             <h3>Exam Results</h3>
@@ -35,7 +40,7 @@
               Your final score is displayed below. Review your answers and track
               your performance to improve in the future.
             </p>
-            <p><span>Score:</span> <span id="_result"> 85 / 100</span></p>
+            <p><span>Score:</span> <span id="_result"></span></p>
           </div>
           <div class="_Shapes">
             <div class="div1" id="one"></div>
