--- a/resultPage.html
+++ b/resultPage.html
@@ -13,6 +13,17 @@
   </head>
   <body>
     <div class="_mainContainer">
+      <div class="_ContainerPobup" id="pobup">
+        <div class="_Card" id="card">
+          <div class="_Text">
+            <h2>Hello There!</h2>
+            <p>Your Questions</p>
+          </div>
+          <div class="_Text">
+            <div class="_allQuestions"></div>
+          </div>
+        </div>
+      </div>
       <div class="_loader">
         <div class="_loaderIcon">
           <img
@@ -28,6 +39,9 @@
         data-aos-duration="2000"
         data-aos-easing="ease-in-out"
       >
+        <button id="Target">
+          <span>show your Questions</span>
+        </button>
         <p class="_uniqe">
           <span class="_ifStudentFailed">
             <button>retake the exam</button></span
